<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:src="@drawable/retro_reads_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="75dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        tools:ignore="NotSibling,SpeakableTextPresentCheck"
        android:background="@drawable/scroll_view"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_pic_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_pic"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/user_pic_placeholder"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/user_pic"
                android:scaleType="fitXY"
                tools:ignore="SpeakableTextPresentCheck"/>

            <TextView
                android:id="@+id/user_data_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_data"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radio_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <RadioButton
                    android:id="@+id/cpf_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    app:buttonTint="@color/green"
                    android:text="CPF"/>


                <RadioButton
                    android:id="@+id/cnpj_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:buttonTint="@color/green"
                    android:text="CNPJ"/>

            </RadioGroup>

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/name_hint"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/cpf_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpf"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/cpf_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/cpf_hint"
                android:inputType="number"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/phone_number_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/phone_number_hint"
                android:inputType="number"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/address_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/street_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/street_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/street_hint"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/address_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_number"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/address_number_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/address_number_hint"
                android:padding="10dp"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/complement_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complement"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/complement_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/complement_hint"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/district_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/district_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/district_hint"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cep"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/cep_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/cep_hint"
                android:inputType="number"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/state_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/state_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/state_hint"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/city_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="18sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/city_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/city_hint"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/account_data_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_data"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:layout_marginTop="6dp"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <TextView
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/password"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:passwordToggleEnabled="true"
                app:endIconMode="password_toggle"
                app:passwordToggleTint="@color/green"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:textSize="17sp"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:background="@drawable/input_field"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/repeat_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/repeat_password"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeat_password_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:passwordToggleEnabled="true"
                app:endIconMode="password_toggle"
                app:passwordToggleTint="@color/green"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:textSize="17sp"
                    android:inputType="textPassword"
                    android:hint="@string/repeat_password_hint"
                    android:background="@drawable/input_field"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_button"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background_selector"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/button_text_selector"
        android:layout_marginHorizontal="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:onClick="openLogin"
        android:text="@string/login"
        android:textColor="@color/green"
        android:layout_marginHorizontal="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/progress_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semi_transparent_white"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="130dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/green"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>