<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_message_interest"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="6dp"
            android:textColor="@color/red"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_message_book_text"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/dialog_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Book name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginVertical="6dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/dialog_no_button"
                style="@style/CustomButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textStyle="bold"
                android:textColor="@color/button_text_selector_red"
                android:textSize="18sp"
                android:layout_marginVertical="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background_selector_red"/>

            <Button
                android:id="@+id/dialog_yes_button"
                style="@style/CustomButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textStyle="bold"
                android:textColor="@color/button_text_selector"
                android:textSize="18sp"
                android:layout_marginVertical="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background_selector"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>