<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_message_interest"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="6dp"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_contact_info"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_margin="6dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginVertical="6dp"
                android:layout_marginLeft="6dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/dialog_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                android:textSize="18sp"
                android:layout_marginVertical="6dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_phone_number"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginVertical="6dp"
                android:layout_marginLeft="6dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/dialog_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="phone"
                android:textSize="18sp"
                android:layout_marginVertical="6dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/dialog_button"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textStyle="bold"
            android:textColor="@color/button_text_selector"
            android:textSize="18sp"
            android:layout_margin="6dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background_selector"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>